Fixed logo alignment

--- a/containers/Signature/SignatureGenerated/styles.module.scss
+++ b/containers/Signature/SignatureGenerated/styles.module.scss
@@ -68,8 +68,8 @@ td {
       img {
         // email specific centering
         display: table-cell;
-        text-align: center;
-        vertical-align: middle;
+        height: 100%;
+        margin: auto;
       }
     }
   }
